setting up the db and fixing the pom.xml